apps/archivy/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: archivy-elasticsearch
  name: archivy-elasticsearch
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivy-elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archivy-elasticsearch
      annotations:
        backup.velero.io/backup-volumes: elasticsearch-data
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
          image: elasticsearch:7.9.0
          name: elasticsearch
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch-data
      restartPolicy: Always
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-data
