apps/archivy/archivy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archivy
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 5000
      targetPort: 5000
  selector:
    app: archivy
